test/invalid-semantics/57551_forbidden_name_print_var/forbidden_name_print_var.mag
-- Author: 57551, Eduardo Proença

-- A variable can not be named `print`

fun main (_) : Unit -> Unit =
    var print : Int = 123;
    unit